app/assets/stylesheets/style.scss
0html, body {
  height: 100%;
}

.container {
  min-height: 100%;
  position:relative;
}

.content {
  margin: 0 auto;
  width: 320px;
  padding: 2% 2% 5em 2%;
}

#logo a {
  float: left;
  padding-left: 1.5%;
  padding-top: .5em;
  font-family: 'Raleway', sans-serif;
  font-size: 2em;
  color: #8E6C88;
  }

nav {
  top: 0;
  width: 100%;
  background-color: #263D42;
  color: #CCDBDC;
  height: 6em;
  }

.nav-links {
  text-align: right;
  padding-right: 1.5%;
  padding-top: 4em;
  font-size: 1em;
  }

.nav-links > a {
  color: #8E6C88;
}

.nav-links > a:hover {
  color: #63C7B2;
}

.notice, .alert {
  text-align: center;
  color: #63C7B2;
  padding: 0.3em;
  font-size: 1em;
}

.errors {
  line-height: 1.5;
  color: #63C7B2;
}

.back-button {
  padding-left: 2%;
}

.heading-no-margin {
  font-size: 1.5em;
  font-weight: bolder;
}

.game-heading {
  position: relative;
  text-align: center;
  border: solid 2px #CCDBDC;
  padding: 10px;
  margin-top: 1%;
}

.game-heading h3,
.game-heading h2 {
  margin: 0 0 0.5em 0;
}

.game-heading h4 {
  margin-bottom: 0.25em;
  margin-top: 0.75em;
  font-weight: normal;
}

.game-edit-link-wrapper {
  display: table;
  position: absolute;
  right: 1%;
  top: 1%;
  width: 30px;
  height: 30px;
  border-radius: 50%;
  background-color: #CCDBDC;

}

.game-edit-link-wrapper:hover {
  background-color: #263D42;
}

.game-edit-link {
  display: table-cell;
  color: #263D42;
  text-align: center;
  vertical-align: middle;
}

.game-edit-link:hover {
  color: #8E6C88;
}

.play-button {
  margin: .83em auto;
  width: 75px;
  height: 75px;
  background-color: #63C7B2;
  border-radius: 50%;
  display: table;
}

.play-button:hover {
  background-color: #263D42;
}

.play-button:active {
  background-color: #263D42;
}

.play-link {
  display: table-cell;
  text-align: center;
  vertical-align: middle;
  color: white;
}

.play-link:hover {
  color: #8E6C88;
}

.play-link:active {
  color: #63C7B2;
}

#players-heading-wrapper {
  display: table;
  width: 200px;
  height: 30px;
  margin: .83em auto;
  position: relative;
}

#players-heading {
  display: table-cell;
  text-align: left;
  vertical-align: middle;
}

.add-player-button-wrapper {
  position: absolute;
  right: 0;
}

.add-player-button {
  width: 30px;
  height: 16px;
  color: #263D42;
  background-color: #CCDBDC;
  display: table-cell;
  vertical-align: middle;
  text-align: center;
  padding: 7px 0;
  border-radius: 2em;
}

.add-player-button:hover {
  background-color: #263D42;
  color: #8E6C88;
}

.player-details {
  text-align: center;
  padding: 1% 0 5% 0;
}

.player-photo {
  width: 200px;
  height: 220px;
  margin: 0 auto;
  overflow: hidden;
}

header h1 {
  padding: 2rem;
  color: rgb(145,51,79);
  font-size: 3rem;
  text-align: center;
  margin: 0;
}

header h3 {
  background-color: rgba(145,51,79, 0.5);
  padding: 2rem;
  color: #FFF;
  text-align: center;
  margin: 0 auto;
  font-family: 'Raleway', sans-serif;
}

.navbar {
  text-align: right;
}

.instructions > h4 {
  text-align: center;
  margin-top: 0;
  font-family: 'Raleway', sans-serif;
}

.clear {
  clear: both;
}

.question {
  width: 200px;
  margin: 0 auto;
  padding: 20px;
}

img {
  max-width: 100%;
}

.number {
  color: rgb(250,250,250);
  font-family: 'Raleway', sans-serif;
  position: absolute;
  width: 1.5rem;
  padding: 0.15rem;
  height: 1.5rem;
  text-align: center;
  background: rgba(128,128,128,.5);
}

.number span {
  vertical-align: -10%;
}

footer {
  background-color: #263D42;
  width: 100%;
  height: 5em;
  position: absolute;
  bottom: 0;
  left: 0;
  color: #8E6C88;
}

.signature-container {
  display:table;
  height:100%;
  width:100%;
  }

.signature {
  display:table-cell;
  text-align:center;
  vertical-align:middle;
  font-size: 1em;
}

.params_in_dev {
  color: #263D42;
  }

.form-container {
  max-width: 1040px;
  height: 3rem;
  margin: 0 auto;
  padding: 0.35rem;
}
.pw-form {
  float: right;
  width: 50%;
}

i.fa-key, i.fa-unlock {
  cursor: pointer;
  height: 1em;
  color: rgb(171,92,114);
  float: left;
}

input[type='password']#pw {
  display: inline-block;
  width: calc(100% - 20px);

}

/***************
FLIP
***************/

.flip {
  -webkit-perspective: 800px; /* Chrome, Safari, Opera */
  perspective: 800px;
  width: 200px;
  height: 220px;
  overflow: hidden;
  position: relative;
}
.flip .card.flipped {
  -webkit-transform: rotateY(-180deg);
  transform: rotateY(-180deg);
}
.flip .card {
  width: 100%;
  height: 100%;
  -webkit-transform-style: preserve-3d;
  -webkit-transition: 0.5s;
  transform-style: preserve-3d;
  transition: 0.5s;
}
.flip .card .face {
  width: 100%;
  height: 100%;
  position: absolute;
  -webkit-backface-visibility: hidden ;
  backface-visibility: hidden ;
}

.flip .card .front {
  z-index: 1;
  background: black;
  color: white;
  cursor: pointer;
  transform: rotateX(0deg);
}
.flip .card .back {
  -webkit-transform: rotateY(-180deg);
  transform: rotateY(-180deg);
  text-align: center;
  line-height: 200px;
  font-size: 1.5rem;
  background: rgb(143,201,185);
  color: rgb(255,255,255);
  height: 220px;
  cursor: pointer;
}

